--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="main.js"></script>
+        <script src="/editMode.js"></script>
+        <script src="/renderer.js"></script>
+        <script src="/main.js"></script>
         <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <title>Hello, world!</title>
@@ -11,15 +13,17 @@
     <body onload="loadSpa()">
         <div class="container p-4">
             <div class="row align-items-center mb-4">
-                <div class="col">
+                <div class="d-flex align-items-center">
                     <h1 id="pageTitle"></h1>
-                </div>
-                <div class="col justify-content-end">
-                    <button type="button" id="editButton" class="btn btn-primary" onclick="editMode.start()">Edit</button>
+                    <button type="button" id="editButton" class="btn btn-primary mx-3" onclick="editMode.start()">Edit</button>
                 </div>
             </div>
             <div id="normalModeContainer" class="row">
-                <div id="content" class="col"></div>
+                <div class="col">
+                    <div class="card">
+                        <div id="content" class="card-body"></div>
+                    </div>
+                </div>
             </div>
             <div id="editModeContainer" class="container d-none">
                 <div class="row">
@@ -27,12 +31,29 @@
                         <textarea class="form-control" id="editTextarea" rows="20"></textarea>
                     </div>
                 </div>
-                <div class="row mt-2">
-                    <div class="col">
-                        <button type="button" id="cancelButton" class="btn btn-danger" onclick="editMode.cancel()">Cancel</button>
+                <div class="row mt-4">
+                    <div class="d-flex justify-content-center">
+                        <div class="btn-group btn-group-lg">
+                            <button type="button" id="cancelButton" class="btn btn-danger" onclick="editMode.cancel()">Cancel</button>
+                            <button type="button" id="previewButton" class="btn btn-primary" onclick="editMode.preview()">Preview</button>
+                            <button type="button" id="saveButton" class="btn btn-primary" onclick="editMode.save()">Save</button>
+                        </div>
                     </div>
-                    <div class="col">
-                        <button type="button" id="saveButton" class="btn btn-primary" onclick="editMode.save()">Save</button>
+                </div>
+            </div>
+            <div id="previewModeContainer" class="row d-none">
+                <div class="col">
+                    <div class="card">
+                        <div id="contentPreview" class="card-body"></div>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="d-flex justify-content-center">
+                        <div class="btn-group btn-group-lg">
+                            <button type="button" id="cancelButton2" class="btn btn-danger" onclick="editMode.cancel()">Cancel</button>
+                            <button type="button" id="backToEditButton" class="btn btn-primary" onclick="editMode.returnToEdit()">Return to editing</button>
+                            <button type="button" id="saveButton2" class="btn btn-primary" onclick="editMode.save()">Save</button>
+                        </div>
                     </div>
                 </div>
             </div>
