--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <script src="/main.js"></script>
         <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <title>Hello, world!</title>
+        <title>Plani-Wiki</title>
     </head>
     <body onload="loadSpa()">
         <div class="container p-4">
